--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@ body {
     background-color: #FB6B6B;
 }
 .content{
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,4 +33,33 @@ body {
     font-weight: bold;
     color: white;
     margin: 13px 0 30px 0;
+}
+.ask{
+    width: 300px;
+    height: 65px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    margin-bottom: 25px;
+    background-color: white;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    
+}
+.ask ion-icon {
+    color: #333333;
+    font-size: 21px;
+
+    margin-right: 15px;
+}
+.ask span {
+    font-family: 'Recursive';
+
+    color: #333333;
+    font-size: 16px;
+    font-weight: 700;
+
+    margin-left: 15px;
 }
