--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,10 +42,13 @@ body {
     align-items: center;
     justify-content: space-between;
 
+
     margin-bottom: 25px;
     background-color: white;
     box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
     border-radius: 5px;
+
+    flex-wrap: wrap;
     
 }
 .ask ion-icon {
@@ -62,4 +65,31 @@ body {
     font-weight: 700;
 
     margin-left: 15px;
+}
+
+.containerPontos{
+
+    width: 300px;
+    height: 37px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.naoLembrei{
+    width: 50px;
+    height: 100%;
+    background-color: red;
+
+}
+.quaseLebrei{
+    width: 50px;
+    height: 100%;
+    background-color: rgb(255, 174, 0);
+
+}
+.Lembrei{
+    width: 50px;
+    height: 100%;
+    background-color: rgb(89, 255, 47);
+
 }
