--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,36 +72,61 @@ body {
     width: 300px;
     height: 37px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    
+}
+.naoLembrei, .quaseLebrei, .Lembrei {
+    
+    width: 87px;
+    height: 100%;
+    border-radius: 5px;
+    color: white;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    font-size: 14px;
+    
 }
 .naoLembrei{
-    width: 50px;
-    height: 100%;
-    background-color: red;
-
+    background-color: #FF3030;
 }
 .quaseLebrei{
-    width: 50px;
-    height: 100%;
-    background-color: rgb(255, 174, 0);
-
+    background-color: #FF922E;
 }
 .Lembrei{
-    width: 50px;
-    height: 100%;
-    background-color: rgb(89, 255, 47);
-
+    background-color: #2FBE34;
 }
 .vermelho span, .vermelho ion-icon{
-    color: #D70900;
+    color: #FF3030;
     text-decoration: line-through;
 }
 .amarelo span, .amarelo ion-icon{
-    color: rgb(255, 174, 0);
+    color: #FF922E;
     text-decoration: line-through;
 }
 .verde span, .verde ion-icon{
-    color: rgb(89, 255, 47);
+    color: #2FBE34;
     text-decoration: line-through;
+}
+.containerResultado{
+
+    width: 100%;
+    height: 70px;
+    background-color: white;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    position: fixed;
+    bottom: 0;
+}
+.close-circle ion-icon{  
+
+    color: #D70900;
 }
