--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,6 +118,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+
     
 }
 .naoLembrei, .quaseLebrei, .Lembrei {
@@ -161,6 +162,7 @@ body {
     width: 100%;
     height: 70px;
     background-color: white;
+    box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
 
     display: flex;
     align-items: center;
